 * plugins/dfsound/externals.h: Likewise.
 * plugins/dfsound/freeze.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/stdafx.h: Likewise.
 * plugins/dfsound/xa.c: Likewise.
 * win32/plugins/dfsound: Added.
 * data/pcsx.glade2: Increased number of savestate slots.
 * gui/Gtk2Gui.c: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Plugin.c: Likewise.
 * po/pcsx.pot, po/*.po: Updated.

August 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr.c: Fixed thread deadlock in some cases.
 * plugins/dfcdrom/cdr.h: Likewise.
 * macosx/plugins/DFCdrom/macsrc/cdr-macosx.c: Likewise.
 * plugins/dfnet/cfg.c: Silenced warning.

August 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/r3000a.h: Refactored the interrupt scheduling code to make it a
   little more readable than using the "magic" numbers.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/mdec.c: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxdma.h: Likewise.
 * libpcsxcore/misc.c: Bumped savestate version.
 * debian/changelog: Updated version.
 * macosx/Info.plist: Likewise.
 * po/zh_TW.po: Corrected a minor translation error.

August 2, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/Pcsx.xcodeproj/project.pbxproj: Added some more optimizations
   parameters for the Deployment build.

August 1, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfinput/cfg-gtk2.c: Only accept axis input if the current axis
   position is off enough from the previous position or initial position.
 * macosx/plugins/DFInput/macsrc/cfg.c: Likewise.
 * macosx/plugins/DFInput/macsrc/cfg.h: Likewise.
 * macosx/plugins/DFInput/macsrc/MappingCell.m: Likewise.
 * macosx/plugins/DFInput/DFInput.xcodeproj/project.pbxproj: Fixed compile
   error.

July 31, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/spu.c: Silenced warning on Mac OS X and FreeBSD.