@@ -319,12 +319,20 @@
 #define ID_FILE_STATES_LOAD_SLOT3       40033
 #define ID_FILE_STATES_LOAD_SLOT4       40034
 #define ID_FILE_STATES_LOAD_SLOT5       40035
+#define ID_FILE_STATES_LOAD_SLOT6       40048
+#define ID_FILE_STATES_LOAD_SLOT7       40049
+#define ID_FILE_STATES_LOAD_SLOT8       40050
+#define ID_FILE_STATES_LOAD_SLOT9       40051
 #define ID_FILE_STATES_LOAD_OTHER       40036
 #define ID_FILE_STATES_SAVE_SLOT1       40037
 #define ID_FILE_STATES_SAVE_SLOT2       40038
 #define ID_FILE_STATES_SAVE_SLOT3       40039
 #define ID_FILE_STATES_SAVE_SLOT4       40040
 #define ID_FILE_STATES_SAVE_SLOT5       40041
+#define ID_FILE_STATES_SAVE_SLOT6       40052
+#define ID_FILE_STATES_SAVE_SLOT7       40053
+#define ID_FILE_STATES_SAVE_SLOT8       40054
+#define ID_FILE_STATES_SAVE_SLOT9       40055
 #define ID_FILE_STATES_SAVE_OTHER       40042
 #define ID_CONFIGURATION_NETPLAY        40043
 #define ID_EMULATOR_SWITCH_ISO          40044
